# k2-creek

./: .appveyor.yml  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  Vagrantfile  azure-pipelines.yml  build.rs  config.ini  config.ini.example  k2_mock.py  pre_push_checks.sh  release.toml  run_tests.sh
.github/workflows/: grcov.yml  publish.yml  test.yml
src/: cli.rs  config.rs  creek_files.rs  file_writer.rs  files.rs  http.rs  kvk_data.rs  lib.rs  main.rs  request.rs  tests.rs
src/api/: mod.rs  v1.rs  v2.rs  v3.rs
src/carddata/: kvk_data.rs  mfefgdo.rs  mod.rs  results.rs
src/config/: mod.rs
src/egk/: mfefgdo.rs  mod.rs
src/file_writer/: mod.rs
src/k2/: mod.rs  request.rs  response.rs
src/kvk/: fmt.rs  mod.rs  parser.rs
src/request/: mod.rs
src/writer/: encode.rs  files.rs  mod.rs  results.rs
tests/: cli.rs  example_response.json  example_response_with_error_code.json  example_response_with_many_nulls.json  integration.rs  integration_tests.rs
tests/api/v1/: egk.json  kvk.json
tests/api/v2/: egk.json  kvk.json
tests/api/v3/: egk.json  kvk.json
tests/k2/: response.json
tests/writer/egk/: Result.xml  eGK_MFDF_HCA_EF_StatusVD.xml  eGK_MFEFGDO.xml  eGK_PersoenlicheVersichertendaten.xml  eGK_Pruefungsnachweis.xml  eGK_allgemeineVersicherungsdaten.xml  eGK_geschuetzteVersichertendaten.xml
tests/writer/kvk/: Result.xml
