[package]
name = "k2-creek"
version = "1.0.0"
authors = ["Benjamin Wenzel <wenzel@ehealthexperts.de>",
           "Christian Fochler <fochler@ehealthexperts.de>"]
license = "MIT"
homepage = "http://k2.ehealthexperts.de"
repository = "https://github.com/eHealthExperts/k2-creek.git"
publish = false
edition = "2018"
build = "build.rs"

[dependencies]
anyhow = "1.0.38"
base64 = "0.13.0"
clap = "2.33.3"
cfg-if = "1.0.0"
config = { version = "0.10.1", default-features= false, features=["ini"] }
der-parser = "4.1.0"
encoding = "0.2.33"
enum-iterator = "0.6.0"
env_logger = "0.8.2"
log = "0.4.13"
nom = "5.1.2"
promptly = "0.3.0"
reqwest = { version = "0.11.0", features = ["blocking", "json", "rustls-tls"] }
rusticata-macros = "3.0.1"
serde = "1.0.120"
serde_derive = "1.0.120"
serde-xml-rs = "0.4.1"
serde_with = "1.6.0"
url = { version = "2.2.0", features = ["serde"] }
xml-rs = "0.8.3"

[dev-dependencies]
assert_cmd = "1.0.2"
mockall = "0.9.0"
predicates = "1.0.6"
serial_test = "0.5.1"
serde_json = "1.0.61"
tempfile = "3.2.0"
test-server = { git = "https://github.com/ChriFo/test-server-rs", tag = "0.9.1" }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.11"

[package.metadata.winres]
FileVersion = "1.0.0"
LegalCopyright = "eHealthExperts GmbH. All rights reserved."
ProductName = "K2 creek"
ProductVersion = "1.0.0"
